--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section class="py-12 px-6 text-center">
     <h2 class="text-2xl font-semibold mb-4">Contact</h2>
     <p>Intéressé par mes services ? Discutons sur WhatsApp :</p>
-    <a href="https://wa.me/690301588" class="inline-block mt-4 bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded shadow">M'écrire sur WhatsApp</a>
+    <a href="https://wa.me/+237690301588" class="inline-block mt-4 bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded shadow">M'écrire sur WhatsApp</a>
   </section>
 </body>
 </html>
